# oop2025

./: .gitignore  LICENSE
Lecture01/: CMakeLists.txt  main.cpp
Lecture03/: CMakeLists.txt  main.cpp
Lecture04/: CMakeLists.txt  main.cpp
Lecture04/geometry/: Rectangle.cpp  Rectangle.h  Square.cpp  Square.h
Lecture06/: CMakeLists.txt  main.cpp
Lecture06/geometry/: Circle.cpp  Circle.h  Diamond.cpp  Point.h  Shape.cpp  Shape.h
Lecture06/mediator/: IRequest.h  Mediator.cpp  Mediator.h
Lecture07/: CMakeLists.txt  main.cpp
Lecture07/geometry/: Rectangle.cpp
Lecture07/geometry/mediator/: CalculateAreaRequestHandler.h
Lecture07/mediator/: IRequest.h  Mediator.cpp  Request.cpp  Request.h
Lecture08/: CMakeLists.txt  Controller.cpp  Controller.h  DbRepository.h  Repository.h  VectorRepository.h  main.cpp
Lecture08/geometry/: Area.cpp  Area.h  Diamond.h  Rectangle.h  Square.cpp
Lecture08/geometry/mediator/: CalculateAreaRequest.cpp  CalculateAreaRequest.h  CalculateAreaRequestHandler.cpp
Lecture08/mediator/: IRequestHandler.h  IResponse.h  Mediator.h
Lecture08/model/: IIdentifiable.h  Person.cpp  Person.h
